# StyleTTS2-Dash

./: .gitignore  README.md  example.py  example_graph.py  pyproject.toml  requirements.txt  studio UI.py
STTS2Dash/: example_graph.json  studio.py  tts.py
STTS2Dash/decoders/: istftnet.py  vocos.py
STTS2Dash/models/: stts2.py
STTS2Dash/upsamplers/: inference.py  model.py  utils.py
